Fix header misalign

--- a/src/app/home/content/item-list/item-list-entry/item-list-entry.component.scss
+++ b/src/app/home/content/item-list/item-list-entry/item-list-entry.component.scss
@@ -1,43 +1,8 @@
-// .product-tile {
-//   margin: 10px;
-//   border: solid 1px gray;
-//   img {
-//     object-fit: cover;
-//     width: 100%;
-//   }
-// }
-input[type='number'] {
-  -moz-appearance: textfield;
-}
-
-
-/* Webkit browsers like Safari and Chrome */
-
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-.product-thumbShim {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 101%;
-  height: 100%;
-  background-color: #282c3f;
-  -webkit-transition: visibility 0s, opacity .5s linear;
-  transition: visibility 0s, opacity .5s linear;
-  visibility: hidden;
-  opacity: 0;
-}
-
 a {
   text-decoration: none;
   background-color: transparent;
   color: #282c3f;
   .product-thumb {
-    height: 239px;
     height: 200px;
     display: block;
     background-color: transparent;
@@ -70,7 +35,7 @@ a {
     .product-price {
       font-size: 15px;
       line-height: 17px;
-      color: #282c3f;
+      // color: #282c3f;
       // margin: 5px 0;
       white-space: nowrap;
       font-weight: 500;
@@ -110,92 +75,6 @@ a {
   }
 }
 
-.btn-add-cart {
-  margin: 0px;
-  padding: 0px;
-  vertical-align: middle;
-  line-height: 32px;
-  line-height: 24px;
-  font-size: 14px;
-}
-
-.product-sizeDisplayDiv {
-  z-index: 1;
-  width: 100%;
-  max-width: 100%;
-  position: absolute;
-  bottom: 91px;
-  background: #fff;
-  margin-bottom: -161px;
-  -webkit-transition: all .2s ease-out;
-  transition: all .2s ease-out;
-  .product-sizeDisplayHeader {
-    border-bottom: 1px solid #eaeaec;
-    border-top: 1px solid #eaeaec;
-    padding: 8px;
-    text-align: left;
-    font-size: 14px;
-    color: #535766;
-  }
-}
-
-.product-sizeButtonsContaier {
-  text-align: center;
-  padding: 10px 0;
-  overflow-y: scroll;
-  box-sizing: border-box;
-  max-height: 108px;
-  .product-sizeButton {
-    border-radius: 20px;
-    margin: 5px;
-    min-width: 34px;
-    height: 34px;
-    background-color: #fff;
-    border: 1px solid #696e79;
-    outline: none;
-    font-size: 12px;
-    color: #696e79;
-    box-sizing: border-box;
-    padding: 5px;
-  }
-}
-
-.product-actions {
-  position: absolute;
-  left: 0;
-  bottom: 40px;
-  border-bottom: 1px solid #eaeaec;
-  border-top: 1px solid #eaeaec;
-  background: #fff;
-  width: 100%;
-  .product-actionsButton {
-    line-height: 20px;
-    margin: 10px 0;
-    font-weight: 800;
-    font-size: 11px;
-    color: #526cd0;
-    text-transform: uppercase;
-    display: inline-block;
-    cursor: pointer;
-    &.product-wishlist {
-      float: left;
-      width: 40%;
-    }
-    &.product-addToBag {
-      width: 60%;
-      float: left;
-      span {
-        border-left: 1px dotted #d4d5d9;
-        display: block;
-      }
-    }
-  }
-}
-
-.button-padding {
-  line-height: 27px;
-}
-
 .quantity-in-cart {
   input {
     border-color: #b5beef;
@@ -208,22 +87,13 @@ a {
   }
 }
 
+/* Webkit browsers like Safari and Chrome */
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-.minus {
-  margin-right: 1px;
-}
-
-.plus {
-  // margin-left: 15px;
-  float: right;
-  background: #60b35b;
-}
-
-.plus1 {
-  background: none;
+input[type='number'] {
+  -moz-appearance: textfield;
 }
